crates/leaf-macros/tests/ui/conditional_unknown_kind_is_a_hard_error.rs
//! An unknown `#[conditional(...)]` leaf kind is a loud `compile_error!` (the
//! condition DSL vocabulary is closed: on_property/on_bean/on_class/all/any/not).

use leaf_macros::conditional;

#[conditional(on_quux("x"))]
struct Thing;

fn main() {}
